Alteracao da descricao

--- a/main.html
+++ b/main.html
@@ -41,7 +41,7 @@
                     <p class="descricao-1">
                         Meu nome é Diana Ceita, sou estudante de Engenharia de Energias na UNILAB.
                         <br>Sou apaixonada por tecnologia e estou sempre em busca de novos desafios e aprendizados.
-                        <br>Neste portfólio, você encontrará informações sobre minha formação, <br> experiências
+                        <br>Neste portfólio, você encontrará informações sobre <br>minha formação, experiências
                         e projetos desenvolvidos ao longo da minha jornada acadêmica e profissional.
                     </p>
                 </div>
