Html alterado Este commit está sendo efeitos de estudos

--- a/main.html
+++ b/main.html
@@ -55,7 +55,7 @@
             </div>
             <div class="segunda-formacao">
                 <p class="ano-formacao-2">2016-2021</p>
-                <p class="curso">Matemática Pura</p>
+                <p class="curso">Matemática Aplicada</p>
             </div>
         </section>
         <section class="experiencia">
